--- a/src/scss/Typography.scss
+++ b/src/scss/Typography.scss
@@ -44,6 +44,12 @@ h2{
     font-family: "Neue Plak Extended";
 }
 
+h3{
+  color: white;
+  font-size: 3rem;
+  font-family: "Neue Plak Extended";
+}
+
 p{
     font-family: "NB International Pro";
     color: white;
