--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -26,7 +26,7 @@ button{
     margin-top: $spacer4;
 
     h1{
-        margin-top: $spacer1;
+      margin-top: $spacer1;
     }
 
     h2{
@@ -106,7 +106,7 @@ button{
       font-size: 2.3rem;
       color: white;
       margin-top: 1.1rem;
-      transform-origin: center 0.5rem;
+      transform-origin: center center;
       transform: rotate(45deg);
       @include md {
         font-size: 3rem;
